<resources>
    <string name="app_name">WhatToWatch</string>
    <string name="start_button">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wonderful">Wonderful</string>
    <string name="swipe_to_skip">"Skip  "</string>
    <string name="best">Best</string>
    <string name="genrechoice">GenreChoice</string>
    <string name="best_250_movies">Best 250 movies</string>
    <string name="moviechoice">MovieChoice</string>
    <string name="_1">#1</string>
    <string name="the_matrix">The Matrix</string>
    <string name="_2000">2000</string>
    <string name="r">R</string>
    <string name="logo">Logo</string>
    <string name="loading_please_wait">Loading. Please wait…</string>
</resources>
